--- a/src/GetView.css
+++ b/src/GetView.css
@@ -1,17 +1,16 @@
 ul {
   list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-
 li {
+  flex: 0 0 25%;
   padding: 10px;
   margin: 10px;
   border-radius: 15px;
   background-color: #181818;
   color: #ffffff;
-}
-
-.columns {
-  display: flex;
 }
 
 a {
@@ -21,6 +20,7 @@ a {
 .columns {
   color: #ffffff;
   text-align: center;
+  justify-content: center;
 }
 
 .timeSelect {
@@ -28,6 +28,14 @@ a {
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  text-align: center;
+  border: solid 1px #ffffff;
+  padding: 25px;
+  border-radius: 15px;
+}
+
+h1 {
+  cursor: pointer;
 }
 
 .loading-spinner {
