--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  color: #ffffff;
+  color: #000000;
   min-width: 100%;
   min-height: 100%;
   display: flex;
@@ -19,19 +19,28 @@
 .input {
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid #ffffff;
-  color: #ffffff;
+  border-bottom: 1px solid #1d1d1d;
+  color: #1d1d1d;
   text-align: center;
-  font-size: 25px;
+  font-size: 22px;
+  margin: 10px;
+  padding: 3px;
+}
+
+h3 {
+  padding: 0px;
+  margin: 0px;
 }
 
 .submit {
-  margin: 10px;
-  background-color: transparent;
+  margin: 5px;
   color: #ffffff;
+  background-color: #285FBA;
+  background-image: linear-gradient(to right,#285FBA, #7535AD);
   padding: 10px;
-  border: 1px solid #ffffff;
+  border: none;
   border-radius: 15px;
+  cursor: pointer;
 }
 
 .wrapper {
@@ -39,7 +48,13 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  border: solid 1px #ffffff;
+  box-shadow: 0px 0px 3px #ffffff;
+  background-color: #ffffff;
   padding: 10px;
-  border-radius: 15px;
+  border-radius: 8px;
+}
+
+p, a {
+  margin: 0px;
+  color: #000000;
 }
