--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web');
+
+* {
+  font-family: 'Titillium Web', sans-serif;
+}
+
 html, body, #root {
-  background-color: #1d1d1d;
+  background-color: #285FBA;
+  background-image: linear-gradient(to right,#285FBA, #7535AD);
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
