--- a/src/GetView.css
+++ b/src/GetView.css
@@ -32,3 +32,32 @@ h2 {
   padding: 0px;
   text-align: center;
 }
+
+.App {
+  color: #000000;
+  min-width: 100%;
+  min-height: calc(100% - 60px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.App-header {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  box-shadow: 0px 0px 3px #ffffff;
+  background-color: #ffffff;
+  padding: 10px;
+  border-radius: 8px;
+}
