--- a/src/Components/Settings/index.css
+++ b/src/Components/Settings/index.css
@@ -21,7 +21,7 @@ h3 {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  box-shadow: 0px 0px 2px #ffffff;
+  box-shadow: 0px 0px 3px #000000;
   background-color: #ffffff;
   padding: 20px 15px 20px 15px;
   border-radius: 8px;
