--- a/src/GetView.css
+++ b/src/GetView.css
@@ -56,7 +56,7 @@ h2 {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  box-shadow: 0px 0px 3px #ffffff;
+  box-shadow: 0px 0px 3px #000000;
   background-color: #ffffff;
   padding: 10px;
   border-radius: 8px;
