Open incident in new tab if clicking summary

--- a/src/Components/Incidents/index.css
+++ b/src/Components/Incidents/index.css
@@ -21,6 +21,11 @@ ul {
   grid-template-columns: repeat(3, 1fr);
 }
 
+.incident-summary {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
 .incident-status {
   float: left;
   width: 25px;
