Apply linter rules
Most of the changes are linter complaints fixes.
Also some refactoring took place, class constructors were removed where
not needed, font import was moved from CSS to index.html and more.

--- a/src/Components/Header/index.css
+++ b/src/Components/Header/index.css
@@ -14,7 +14,7 @@
 .menu-right {
   position: absolute;
   right: 0;
-  padding: 0px 15px 0px 15px;
+  padding: 0 15px 0 15px;
   align-items: center;
   justify-content: right;
   display: flex;
