--- a/src/Components/ContextMenu/index.css
+++ b/src/Components/ContextMenu/index.css
@@ -2,19 +2,19 @@
   position: absolute;
   background-color: #ffffff;
   border-radius: 8px;
-  box-shadow: 0px 0px 3px #000000;
+  box-shadow: 0 0 3px #000000;
   text-align: center;
 }
 
 .context-menu > ul {
   list-style-type: none;
   display: block;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
 }
 
 .context-menu > ul > li {
-  padding: 0px;
+  padding: 0;
   cursor: pointer;
 }
 
