--- a/src/Components/Modals/Settings/index.css
+++ b/src/Components/Modals/Settings/index.css
@@ -1,5 +1,5 @@
 .settings > h2 {
-  padding: 0px 0px 15px 0px;
+  padding: 0 0 15px 0;
 }
 
 .settings-wrapper {
@@ -20,7 +20,7 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  box-shadow: 0px 0px 3px #000000;
+  box-shadow: 0 0 3px #000000;
   background-color: #ffffff;
   padding: 20px 15px 20px 15px;
   border-radius: 8px;
@@ -29,6 +29,6 @@
 
 p,
 a {
-  margin: 0px;
+  margin: 0;
   color: #000000;
 }
