--- a/src/Components/Modals/Teams/index.css
+++ b/src/Components/Modals/Teams/index.css
@@ -1,6 +1,6 @@
 h3 {
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
 }
 
 .teams-settings-wrapper {
@@ -21,7 +21,7 @@ h3 {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  box-shadow: 0px 0px 3px #000000;
+  box-shadow: 0 0 3px #000000;
   background-color: #ffffff;
   padding: 20px 15px 20px 15px;
   border-radius: 8px;
