--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Titillium+Web");
-
 * {
   font-family: "Titillium Web", sans-serif;
 }
@@ -87,7 +85,7 @@ input[type="checkbox"] {
 }
 
 label {
-  margin: 0px 10px 0px 0px;
+  margin: 0 10px 0 0;
   cursor: pointer;
   width: 45px;
   height: 20px;
