--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,7 @@ input[type="checkbox"] {
   display: none;
 }
 
-label {
+.checkbox-label {
   margin: 0 10px 0 0;
   cursor: pointer;
   width: 45px;
@@ -95,7 +95,7 @@ label {
   position: relative;
 }
 
-label:after {
+.checkbox-label:after {
   content: "";
   position: absolute;
   top: 5px;
@@ -107,15 +107,46 @@ label:after {
   transition: 0.4s;
 }
 
-input:checked + label {
+input[type="checkbox"]:checked + .checkbox-label {
   background: #2ebc2e;
 }
 
-input:checked + label:after {
+input[type="checkbox"]:checked + .checkbox-label:after {
   left: calc(100% - 5px);
   transform: translateX(-100%);
 }
 
-label:active:after {
+.checkbox-label:active:after {
   width: 25px;
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+.radio-label {
+  margin: 0 10px 0 0;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  background: grey;
+  display: block;
+  border-radius: 100px;
+  position: relative;
+}
+
+.radio-label:after {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 10px;
+  height: 10px;
+  background: #ffffff;
+  border-radius: 5px;
+  transition: 0.4s;
+}
+
+input[type="radio"]:checked + .radio-label {
+  background: #2ebc2e;
 }
