--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,13 @@
   font-family: "Titillium Web", sans-serif;
 }
 
+hr {
+  width: auto;
+  height: 1px;
+  border: none;
+  background-color: #000000;
+}
+
 html,
 body,
 #root {
