--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ body,
   color: #1d1d1d;
   text-align: center;
   font-size: 22px;
-  margin: 10px;
+  margin: 10px 0px 10px 0px;
   padding: 3px;
 }
 
