--- a/src/Components/Modals/index.css
+++ b/src/Components/Modals/index.css
@@ -23,18 +23,19 @@ h3 {
   text-align: center;
   box-shadow: 0 0 3px #000000;
   background-color: #ffffff;
-  padding: 20px 15px 20px 15px;
+  padding: 15px 15px 20px 15px;
   border-radius: 8px;
   min-width: 300px;
 }
 
 .modal > h2 {
-  margin: 0px;
+  margin: 0;
 }
 
 .modal > ul {
   list-style-type: none;
   margin: 0;
+  padding: 0;
 }
 
 .modal > ul > li {
@@ -43,6 +44,11 @@ h3 {
   justify-content: left;
   display: flex;
   flex-direction: column;
+}
+
+.modal > ul > li > h4 {
+  margin: 0;
+  padding: 0;
 }
 
 .modal > ul > li > p {
