--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,7 @@ body,
     background-color: #006400;
   }
   25% {
-    background-color: #228B22;
+    background-color: #228b22;
   }
   50% {
     background-color: rgb(17, 173, 17);
@@ -149,4 +149,30 @@ input[type="radio"] {
 
 input[type="radio"]:checked + .radio-label {
   background: #2ebc2e;
+}
+
+.dropdown {
+  position: relative;
+}
+
+.dropdown:after {
+  content: "<>";
+  transform: rotate(90deg);
+  color: #000000;
+  right: 5px;
+  top: 17px;
+  position: absolute;
+  pointer-events: none;
+}
+
+.dropdown select {
+  background-color: transparent;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 50px;
+  margin: 5px 0px;
+  font-size: 16px;
+  border: 2px solid #e7e7e7;
 }
