--- a/src/Components/Footer/index.css
+++ b/src/Components/Footer/index.css
@@ -3,10 +3,10 @@
   right: 15px;
   bottom: 0;
   width: 100%;
-  color: #ffffff;
+  color: #f5f5f5;
   text-align: right;
 }
 
 .footer > p {
-  color: #ffffff;
+  color: #f5f5f5;
 }
