--- a/src/Components/Modals/index.css
+++ b/src/Components/Modals/index.css
@@ -22,7 +22,7 @@ h3 {
   justify-content: center;
   text-align: center;
   box-shadow: 0 0 3px #000000;
-  background-color: #ffffff;
+  background-color: #2a2e32;
   padding: 15px 15px 20px 15px;
   border-radius: 8px;
   min-width: 300px;
@@ -30,6 +30,7 @@ h3 {
 
 .modal > h2 {
   margin: 0;
+  color: #ffffff;
 }
 
 .modal > ul {
@@ -44,6 +45,12 @@ h3 {
   justify-content: left;
   display: flex;
   flex-direction: column;
+  background-color: transparent;
+  color: #ffffff;
+}
+
+.modal > ul > li > p {
+  color: #ffffff;
 }
 
 .modal > ul > li > h4 {
@@ -59,9 +66,9 @@ h3 {
 p,
 a {
   margin: 0;
-  color: #000000;
+  color: #f5f5f5;
 }
 .title {
-  color: #000000;
+  color: #f5f5f5;
   margin: 0;
 }
