--- a/src/GetView.css
+++ b/src/GetView.css
@@ -2,18 +2,18 @@ li {
   margin: 10px;
   padding: 10px;
   border-radius: 8px;
-  background-color: #ffffff;
+  background-color: #f5f5f5;
 }
 
 .columns {
-  color: #000000;
+  color: #f5f5f5;
   text-align: center;
   justify-content: center;
   width: 100%;
 }
 
 .day > h1 {
-  color: #ffffff;
+  color: #f5f5f5;
 }
 
 .datepicker {
@@ -23,7 +23,7 @@ li {
 }
 
 .App {
-  color: #000000;
+  color: #f5f5f5;
   min-width: 100%;
   min-height: calc(100% - 60px);
   display: flex;
@@ -45,8 +45,16 @@ li {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  box-shadow: 0 0 3px #000000;
-  background-color: #ffffff;
+  background-color: #2a2e32;
   padding: 20px;
   border-radius: 8px;
+}
+
+.App-wrapper
+  > .react-datepicker-wrapper
+  > .react-datepicker__input-container
+  > input {
+  color: #f5f5f5;
+  background-color: #202427;
+  border: none;
 }
