--- a/src/GetView.scss
+++ b/src/GetView.scss
@@ -25,19 +25,9 @@ li {
 .App {
   color: #f5f5f5;
   min-width: 100%;
-  min-height: calc(100% - 60px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.App-header {
-  width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .App-wrapper {
@@ -46,15 +36,8 @@ li {
   justify-content: center;
   text-align: center;
   background-color: #2a2e32;
+  margin: 0 0 0 15.625rem;
+  width: 100%;
   padding: 20px;
   border-radius: 8px;
-}
-
-.App-wrapper
-  > .react-datepicker-wrapper
-  > .react-datepicker__input-container
-  > input {
-  color: #f5f5f5;
-  background-color: #202427;
-  border: none;
 }
